--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <meta name="DC.source" content="http://msdn.microsoft.com/en-us/library/hbxc2t98%28VS.85%29.aspx">
 <meta name="DC.source" content="http://msdn.microsoft.com/en-us/library/ms533050%28VS.85%29.aspx">
 <meta name="DC.rights" content="copyright contributors, comp.lang.javascript">
-<link rel="StyleSheet" href="comp.lang.javascript%20FAQ_files/faq.css" type="text/css" media="screen">
+<link rel="StyleSheet" href="css/faq.css" type="text/css" media="screen">
 <title> comp.lang.javascript FAQ</title>
 </head>
  <body>
