--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
  <body>
 <h1> comp.lang.javascript FAQ</h1>
-<p>Version 32.2, Updated 2010-10-08, by Garrett Smith</p><div id="nav"><a href="http://www.jibbering.com/faq/notes/">FAQ Notes</a></div>
+<p>Version 32.2, Updated 2010-10-08, by Garrett Smith</p><div id="nav"><a href="notes/">FAQ Notes</a></div>
 <ul id="faqList">
 <li>1 <a href="#meta">Meta-FAQ meta-questions</a>
 
