--- a/notes/index.html
+++ b/notes/index.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
 <title>Notes on the comp.lang.javascript FAQ</title>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<link href="../faq.css" rel="stylesheet" type="text/css">
+<link href="../css/faq.css" rel="stylesheet" type="text/css">
 <link href="css/notes.css" rel="stylesheet" type="text/css">
 </head>
 <body>
